src/ui/snapshots/herdr_worktree_nav__ui__render__tests__the_panel_holds_what_the_prompt_line_had_to_cut.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 18)"
---
" / me/app: refs unreadable: warning: ignoring broken ref refs/heads/main warning:…  5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (3)                                                                             "
"   ├── ● main                     /wt/main                                                  "
" ◆ │  ├── ● claude                w1:p1                                                     "
"   │  └── · shell                 w1:p2                                                     "
"   ├──┌──────────────────────────────────────────────────────────────────────────────┐      "
"   │  │ 1 thing is wrong                                                             │      "
"   └──│                                                                              │      "
"      │ me/app: refs unreadable: warning: ignoring broken ref refs/heads/main        │      "
"   ● m│ warning: ignoring broken ref refs/heads/chore/deps                           │      "
"   └──└──────────────────────────────────────────────────────────────────────────────┘      "
"      └── ● claude                w3:p1                                                     "
"                                                                                            "
"   · not in any repository (1)                                                              "
"   └── · shell                    w9:p1                                                     "
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────"
" ! or esc closes  herdr-worktree-nav dump has them in full                                  "
